--- a/src/app/componentes/vista-miembros/vista-miembros.component.html
+++ b/src/app/componentes/vista-miembros/vista-miembros.component.html
@@ -1,29 +1,31 @@
-  <h1>Tablero CAMVAN</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="kanban-column">
-          <h4>To Do</h4>
-          <div class="kanban-card">Tarea 1</div>
-          <div class="kanban-card">Tarea 2</div>
-          <div class="kanban-card">Tarea 3</div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="kanban-column">
-          <h4>In Progress</h4>
-          <div class="kanban-card">Tarea 4</div>
-          <div class="kanban-card">Tarea 5</div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="kanban-column">
-          <h4>Done</h4>
-          <div class="kanban-card">Tarea 6</div>
-          <div class="kanban-card">Tarea 7</div>
-          <div class="kanban-card">Tarea 8</div>
-        </div>
-      </div>
-    </div>
-  </div>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand">NOMBRE XXXXX</a>
   
+      <div>
+        <a class="navbar-brand">MIEMBROS</a>
+        <button class="btn btn-outline-success" routerLink="/">Salir</button>
+    </div>
+    </div>
+  </nav>
+  
+  <div>
+    <table class="table table-light">
+        <thead>
+          <tr>
+            <th scope="col">Tareas</th>
+            <th> </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let tarea of tareas">
+            <td>{{tarea.NOMBRETAREA}}</td>
+            <td> <button type="button" (click)="openFormModal()" class="btn btn-danger">
+              Editar
+            </button></td>
+          
+        </tr>
+        
+        </tbody>
+      </table>
+  </div>
