--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -11,7 +11,7 @@
       <div class='col-6'>
 
           <!-- <img src="../../../assets/img/login/fondopeque.png" class="fondoii"> -->
-          <form class="formulario" class="fondoii">
+          <form class="formulario" class="fondoii" (ngSubmit)="validarUsuario()">
 
               <div class="auth-box">
 
@@ -29,14 +29,14 @@
                   <!-- Form -->
                   <div class="row">
                       <div class="col-12">
-                          <form class="form-horizontal mt-3" id="loginform">
+                          <form class="form-horizontal mt-3" id="loginform" >
                               <div class="input-group mb-3">
                                   <span class="input-group-text" id="basic-email"><i class="ti-user"></i>
                                       <img src="../../../assets/img/ICONOUSER.png" alt="Imagen de usuario" style="width: 20px; height: 20px;">
                                   </span>
 
                                   <input type="text" class="form-control form-control-lg" placeholder="Cédula"
-                                      aria-label="email" aria-describedby="basic-addon1" #u1 [(ngModel)]="formData.username" name="email" id="email">
+                                       aria-describedby="basic-addon1" #u1 [(ngModel)]="formData.username" name="email" id="email">
                               </div>
                               <div class="input-group mb-3">
                                   <span class="input-group-text" id="password"><i class="ti-pencil"></i>
@@ -58,7 +58,7 @@
 
                               <div class="form-group text-center mt-3">
                                   <div class="col-xs-12 pb-4">
-                                      <button class="btn d-block w-100 btn-lg btn" style="background: rgb(88,87,87);
+                                      <button type="submit" class="btn d-block w-100 btn-lg btn" style="background: rgb(88,87,87);
                                       background: linear-gradient(94deg, rgba(88,87,87,1) 0%, rgba(32,32,32,1) 100%); font-family: 'Sansation_Regular', sans-serif; ; font-size: 20px;color: whitesmoke; height:45px;" type="button">INGRESO</button>
                                   </div>
                               </div>
