--- a/src/app/componentes/vista-admin/vista-admin.component.html
+++ b/src/app/componentes/vista-admin/vista-admin.component.html
@@ -1,82 +1,62 @@
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand">ADMINISTRADOR</a>
+    <div>
+      <a class="navbar-brand">ADMINISTRADOR</a>
+      <button class="btn btn-outline-success" routerLink="/">Salir</button>
+    </div>
+  </div>
+</nav>
 <div class="row">
+  <div class='col-12' style="background-color:rgb(255, 255, 255)" >
+    <div class="card" style="background-color:rgb(253, 253, 253)">
+      <div class="card-header" style="background-color:white">
+        <div
+          class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
+          <div>
+            <div class="container" style="margin-top:30px; margin-bottom: 30px;">
+              <div class="row justify-content-md-center" style="background-color: white; ">
 
-    <div class='col-12' style="background-color:rgb(255, 255, 255)" >
-      <div class="card" style="background-color:rgb(253, 253, 253)">
-        <div class="card-header" style="background-color:white">
-          <div
-            class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
-            <div>
-              <div class="container" style="margin-top:30px; margin-bottom: 30px;">
-                <div class="row justify-content-md-center" style="background-color: white; ">
-  
-                  <h2 class="card-title" style="color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; margin-top: 20px;"><strong><em>Gestión usuarios</em></strong></h2>
-           <hr style="opacity: 8; color:#d10a11; margin-top: -5px;">
-
-                <form (ngSubmit)="()">
-                  <div style="display: flex; align-items: center;">
-                    <div class="col-sm-6">
-                      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Nombre</h4>
-                          <div class="mt-3">
-                            <input  type="text" name="nombre" id="nombre" placement="right"
-                              ngbTooltip="Nombre" class="form-control" [(ngModel)]="formData.nombre">
-                          </div>
-                        </div>
+                <h2 class="card-title" style="color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; margin-top: 20px;"><strong><em>Gestión usuarios</em></strong></h2>
+         <hr style="opacity: 8; color:#d10a11; margin-top: -5px;">
+                <div style="display: flex; align-items: center;">
+                  <div class="col-sm-6">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Cédula</h4>
+                        <form class="mt-3">
+                          <input  type="text" name="cedula" id="cedula" placement="right"
+                            ngbTooltip="Cédula" class="form-control">
+                        </form>
                       </div>
-  
                     </div>
-                    <div class="col-sm-6">
-                      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Apellido</h4>
-                          <div class="mt-3">
-                            <input name="apellido" id="apellido" type="text"
-                              placement="right" ngbTooltip="Apellido" class="form-control" [(ngModel)]="formData.apellido">
-                          </div>
-                        </div>
+
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Nombre</h4>
+                        <form class="mt-3">
+                          <input name="nombre" id="nombre" type="text"
+                            placement="right" ngbTooltip="Nombre" class="form-control">
+                        </form>
                       </div>
                     </div>
                   </div>
+                </div>
+                <div style="display: flex; align-items: center;">
+                  <div class="col-sm-6">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Rol</h4>
+                        <form class="mt-3">
+                          <select class="form-select" aria-label="Default select example" name="rol" id="rol">
+                            <option value="administrador">Administrador</option>
+                            <option value="gerente">Gerente de Proyectos</option>
+                            <option value="miembro">Miembro de equipo</option>
+                          </select>
 
-
-                  <div style="display: flex; align-items: center;">
-                    <div class="col-sm-6">
-                      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Cédula</h4>
-                          <div class="mt-3">
-                            <input  type="text" name="cedula" id="cedula" placement="right"
-                              ngbTooltip="Cédula" class="form-control" [(ngModel)]="formData.cedula">
-                          </div>
-                        </div>
-                      </div>
-  
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Contraseña</h4>
-                          <div class="mt-3">
-                            <input name="contrasena" id="contrasena" type="text"
-                              placement="right" ngbTooltip="Contraseña" class="form-control" [(ngModel)]="formData.contrasena">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-
-
-                  <div style="display: flex; align-items: center;">
-                    <div class="col-sm-6">
-                      <div class="card">
-                        <div class="card-body">
-                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 
-                          'Sansation_Regular', sans-serif; font-size: 16px;">Rol</h4>
-                        <div class="mt-3">
-                          <select class="form-select" aria-label="Default select example" name="rol" id="rol" [(ngModel)]="formData.rol">
-                        </div>
+                        </form>
                       </div>
                     </div>
                   </div>
@@ -84,34 +64,31 @@
                     <div class="card">
                       <div class="card-body">
                         <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Disponibilidad</h4>
-                        <div class="mt-3">
-                          <select class="form-select" aria-label="Default select example" name="rol" id="rol" [(ngModel)]="formData.disponibilidad">
+                        <form class="mt-3">
+                          <select class="form-select" aria-label="Default select example" name="rol" id="rol">
                             <option value="si">Si</option>
                             <option value="no">No</option>
                           </select>
-                        </div>
+                        </form>
+                      </div>
                     </div>
+
                   </div>
-
                 </div>
-              </div>
-
-
-            <div style="
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;" >
-            <button type="submit" class="btn btn-danger" style="font-family:'Sansation_Regular', sans-serif; margin-top: 30px; margin-block-end: 15px; font-size: 18px; width: 550px;" >Crear</button>
-
-             </div>
-          <br>
-
-        </form>
+                <div style="
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;" >
+                <button type="button" class="btn btn-danger" style="font-family:'Sansation_Regular', sans-serif; margin-top: 30px; margin-block-end: 15px; font-size: 18px; width: 550px;">Crear</button>
+  
+                 </div>
+              <br>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-</div>
+  </div>
 
