--- a/src/app/componentes/vista-gerente/vista-gerente.component.html
+++ b/src/app/componentes/vista-gerente/vista-gerente.component.html
@@ -1,1 +1,250 @@
-<p>vista-gerente works!</p>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand">GERENTE</a>
+      <div>
+        <a class="navbar-brand">GERENTE</a>
+        <button class="btn btn-outline-success" routerLink="/">Salir</button>
+      </div>
+    </div>
+  </nav>
+<div class="row">
+    <div class='col-12' style="background-color:rgb(255, 255, 255)" >
+      <div class="card" style="background-color:rgb(253, 253, 253)">
+        <div class="card-header" style="background-color:white">
+          <div
+            class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
+            <div>
+              <div class="container" style="margin-top:30px; margin-bottom: 30px;">
+                <div class="row justify-content-md-center" style="background-color: white; ">
+  
+                  <h2 class="card-title" style="color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; margin-top: 20px;"><strong><em>Gestión Proyectos</em></strong></h2>
+           <hr style="opacity: 8; color:#d10a11; margin-top: -5px;">
+                  <div style="display: flex; align-items: center;">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Nombre</h4>
+                          <form class="mt-3">
+                            <input  type="text" name="nombre" id="nombre" placement="right"
+                              ngbTooltip="nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+  
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Descripción</h4>
+                          <form class="mt-3">
+                            <input name="descripcion" id="descripcion" type="descripcion"
+                              placement="right" ngbTooltip="Nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div style="display: flex; align-items: center;">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Fecha Inicio</h4>
+                          <form class="mt-3">
+                            <input  type="date" name="f_inicio" id="f_inicio" placement="right"
+                              ngbTooltip="nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+  
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Fecha Fin</h4>
+                          <form class="mt-3">
+                            <input name="f_fin" id="f_fin" type="date"
+                              placement="right" ngbTooltip="Nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+  
+  
+                <div style="
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;" >
+                <button type="button" class="btn btn-danger" style="font-family:'Sansation_Regular', sans-serif; margin-top: 30px; margin-block-end: 15px; font-size: 18px; width: 550px;">Crear</button>
+  
+                 </div>
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  
+  <!--Gestion tareas-->
+  <div class="row">
+    <div class='col-12' style="background-color:rgb(255, 255, 255)" >
+      <div class="card" style="background-color:rgb(253, 253, 253)">
+        <div class="card-header" style="background-color:white">
+          <div
+            class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
+            <div>
+              <div class="container" style="margin-top:30px; margin-bottom: 30px;">
+                <div class="row justify-content-md-center" style="background-color: white; ">
+  
+                  <h2 class="card-title" style="color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; margin-top: 20px;"><strong><em>Gestión Tareas</em></strong></h2>
+           <hr style="opacity: 8; color:#d10a11; margin-top: -5px;">
+                  <div style="display: flex; align-items: center;">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Nombre</h4>
+                          <form class="mt-3">
+                            <input  type="text" name="nombre" id="nombre" placement="right"
+                              ngbTooltip="nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+  
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Descripción</h4>
+                          <form class="mt-3">
+                            <input name="descripcion" id="descripcion" type="descripcion"
+                              placement="right" ngbTooltip="Nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div style="display: flex; align-items: center;">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Fecha Inicio</h4>
+                          <form class="mt-3">
+                            <input  type="date" name="f_inicio" id="f_inicio" placement="right"
+                              ngbTooltip="nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+  
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Fecha Fin</h4>
+                          <form class="mt-3">
+                            <input name="f_fin" id="f_fin" type="date"
+                              placement="right" ngbTooltip="Nombre" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+  
+                  </div>
+                  <div class="col-sm-6">
+                    <div class="card">
+                      <div class="card-body">
+                        <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Estado</h4>
+                        <form class="mt-3">
+                            <select class="form-select" aria-label="Default select example" name="estado" id="estado">
+                              <option value="pendiente">Pendiente</option>
+                              <option value="progreso">En Progreso</option>
+                              <option value="completadas">Completada</option>
+                            </select>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+  
+  
+                <div style="
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;" >
+                <button type="button" class="btn btn-danger" style="font-family:'Sansation_Regular', sans-serif; margin-top: 30px; margin-block-end: 15px; font-size: 18px; width: 550px;">Crear</button>
+  
+                 </div>
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  
+  
+  
+  
+  
+  
+  <!--Gestion Hitos-->
+  <div class="row">
+    <div class='col-12' style="background-color:rgb(255, 255, 255)" >
+      <div class="card" style="background-color:rgb(253, 253, 253)">
+        <div class="card-header" style="background-color:white">
+          <div
+            class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
+            <div>
+              <div class="container" style="margin-top:30px; margin-bottom: 30px;">
+                <div class="row justify-content-md-center" style="background-color: white; ">
+  
+                  <h2 class="card-title" style="color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; margin-top: 20px;"><strong><em>Gestión Hitos</em></strong></h2>
+           <hr style="opacity: 8; color:#d10a11; margin-top: -5px;">
+                  <div style="display: flex; align-items: center;">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Fecha</h4>
+                          <form class="mt-3">
+                            <input  type="date" name="fecha" id="fecha" placement="right"
+                              ngbTooltip="fecha" class="form-control">
+                          </form>
+                        </div>
+                      </div>
+  
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h4 class="card-title" style=" color: #3c3c3b; font-family: 'Sansation_Regular', sans-serif; font-size: 16px;">Tareas</h4>
+                          <form class="mt-3">
+                            <select class="form-select" size="3" aria-label="size 3 select example">
+                              <option selected>Opciones</option>
+                              <option value="1">Análisis</option>
+                              <option value="2">Diseño</option>
+                              <option value="3">Prueba</option>
+                            </select>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <div style="
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;" >
+                <button type="button" class="btn btn-danger" style="font-family:'Sansation_Regular', sans-serif; margin-top: 30px; margin-block-end: 15px; font-size: 18px; width: 550px;">Crear</button>
+  
+                 </div>
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
