--- a/src/app/componentes/vista-miembros/vista-miembros.component.html
+++ b/src/app/componentes/vista-miembros/vista-miembros.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand">NOMBRE XXXXX</a>
+    <a class="navbar-brand">MIEMBROS</a>
     <div>
       <a class="navbar-brand">MIEMBROS</a>
       <button class="btn btn-outline-success" routerLink="/">Salir</button>
